--- a/wizardmaker.html
+++ b/wizardmaker.html
@@ -496,7 +496,9 @@
       console.error("Template auto-load failed:", err);
     }
   }
-  autoLoadTemplate();
+   autoLoadTemplate();
+</script>  <!-- ✅ properly close the previous script -->
+
 <!-- ================== LIBRARY SIDEBAR FETCH FROM LIBRARY ================== -->
 
 <!-- Floating black + button -->
