--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <a href="library.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
     Go to Library
   </a>
+  <a href="signup.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80"  style= "margin-right: 30px;" >
 </div>
 
   <!-- Templates Grid -->
