--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
   <!-- Header -->
 <div class="flex justify-between items-center mb-6">
   <h1 class="text-3xl font-bold">Sitegen</h1>
-  <a href="library.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
-    Go to Library
-  </a>
-  <a href="signup.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80"  style= "margin-right: 30px;">Signup</a>
+ <a href="library.html" 
+         class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
+        Go to Library
+      </a>
+  <a href="signup.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80"  style= "margin-right: 80px;">Signup</a>
 </div>
 
   <!-- Templates Grid -->
