--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="flex justify-between items-center mb-6">
   <h1 class="text-3xl font-bold">Sitegen</h1>
  <a href="library.html" 
-         class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
+         class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80  style:display: flex; justify-content: space-between; align-items: center;">
         Go to Library
       </a>
   <a href="signup.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80"  style= "margin-right: 80px;">Signup</a>
