--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
 
   <!-- Header -->
 <div class="flex justify-between items-center mb-6">
+  <!-- Left side -->
   <h1 class="text-3xl font-bold">Sitegen</h1>
- <a href="library.html" 
-         class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80  style:display: flex; justify-content: space-between; align-items: center;">
-        Go to Library
-      </a>
-  <a href="signup.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80"  style= "margin-right: 80px;">Signup</a>
+
+  <!-- Right side -->
+  <div class="flex space-x-4 mr-8">
+    <a href="library.html" 
+       class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
+      Go to Library
+    </a>
+    <a href="signup.html" 
+       class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
+      Signup
+    </a>
+  </div>
 </div>
 
   <!-- Templates Grid -->
