--- a/signup.html
+++ b/signup.html
@@ -5,78 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sitegen – Signup</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-900 font-sans">
+<body class="bg-gray-50 text-gray-900">
 
   <!-- ✅ Sitegen Header -->
-  <header class="bg-white shadow-sm">
-    <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
-      <!-- Left logo -->
-      <h1 class="text-2xl font-bold text-indigo-600">Sitegen</h1>
+  <header class="site-header shadow-sm bg-white">
+    <div class="header-container flex items-center justify-between px-6 py-3">
+      <!-- Left side: Brand -->
+      <h1 class="text-xl font-bold text-black">Sitegen</h1>
 
-      <!-- Right navigation -->
-      <nav class="flex items-center space-x-4">
-        <a href="index.html" 
-           class="px-4 py-2 rounded-lg hover:bg-black hover:text-white transition">Home</a>
-        <a href="library.html" 
-           class="px-4 py-2 rounded-lg hover:bg-black hover:text-white transition">Dashboard</a>
-        <a href="login.html" 
-           class="px-4 py-2 rounded-lg hover:bg-black hover:text-white transition">Login</a>
+      <!-- Right side: Navigation -->
+      <nav class="flex space-x-4">
+        <a href="index.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">Home</a>
+        <a href="library.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">Dashboard</a>
+        <a href="login.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">Login</a>
+        <a href="signup.html" class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">Signup</a>
       </nav>
     </div>
   </header>
 
-  <!-- ✅ Signup Form Box -->
+  <!-- ✅ Signup Form -->
   <main class="flex justify-center items-center min-h-screen px-4">
-    <div class="bg-white rounded-2xl shadow-lg p-8 w-full max-w-md hover:shadow-xl transition transform hover:-translate-y-1">
+    <div class="auth-form-box bg-white rounded-2xl shadow-md p-8 w-full max-w-md animate-fade-in">
 
-      <!-- Title -->
-      <h2 class="text-3xl font-bold text-center text-indigo-600 mb-6">Create Your Account</h2>
+      <h2 class="text-2xl font-bold text-center text-black mb-6">Create Your Account</h2>
       
-      <!-- Form -->
       <form id="signupForm2" class="space-y-4">
-        <input type="text" id="name" placeholder="Full Name" required 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
-        <input type="email" id="email" placeholder="Email" required 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
-        <input type="password" id="password" placeholder="Password" required 
-               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"/>
+        <input type="text" id="name" placeholder="Full Name" required class="w-full p-3 border rounded-lg"/>
+        <input type="email" id="email" placeholder="Email" required class="w-full p-3 border rounded-lg"/>
+        <input type="password" id="password" placeholder="Password" required class="w-full p-3 border rounded-lg"/>
         
-        <button type="submit" 
-                class="w-full bg-black text-white py-3 rounded-lg hover:bg-gray-800 transition">
+        <button type="submit" class="w-full bg-black text-white py-3 rounded-lg hover:opacity-90">
           Sign Up
         </button>
 
         <button type="button" id="resendVerificationBtn" 
-                class="w-full bg-gray-200 text-gray-800 py-2 rounded-lg mt-2" disabled>
+          class="w-full bg-gray-200 text-gray-800 py-2 rounded-lg mt-2" disabled>
           Resend Verification
         </button>
 
         <button type="button" id="goToLoginBtn" 
-                class="w-full border border-gray-300 text-gray-700 py-2 rounded-lg mt-2 hover:bg-gray-100">
+          class="w-full border border-gray-300 text-gray-700 py-2 rounded-lg mt-2 hover:bg-gray-100">
           Already have an account? Login
         </button>
       </form>
 
-      <!-- Divider -->
-      <div class="my-6 flex items-center">
+      <!-- OR Divider -->
+      <div class="or-divider my-6 flex items-center">
         <hr class="flex-grow border-gray-300"/>
-        <span class="px-3 text-gray-400 text-sm">OR</span>
+        <span class="px-3 text-gray-500 text-sm">OR</span>
         <hr class="flex-grow border-gray-300"/>
       </div>
 
       <!-- ✅ Google Signup -->
       <button type="button" id="googleSignupBtn" 
-              class="w-full flex items-center justify-center bg-white border border-gray-300 py-2 rounded-lg shadow-sm hover:bg-gray-50">
+        class="w-full flex items-center justify-center bg-white border border-gray-300 py-2 rounded-lg shadow-sm hover:bg-gray-50">
         <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" class="w-5 h-5 mr-2"/>
         Continue with Google
       </button>
     </div>
   </main>
 
+  <!-- ✅ Verify Email Box -->
+  <section class="flex justify-center mt-6 px-4">
+    <div class="auth-form-box bg-white rounded-xl shadow p-6 w-full max-w-md animate-fade-in">
+      <h3 class="text-lg font-semibold mb-3 text-black">Verify Your Email</h3>
+      <input type="email" id="verifyEmailInput" placeholder="Enter your email" 
+        class="w-full p-3 border rounded-lg mb-2"/>
+      <button id="verifyEmailBtn" 
+        class="w-full bg-black text-white py-2 rounded-lg hover:opacity-90">
+        Send Verification Email
+      </button>
+    </div>
+  </section>
+
   <!-- ✅ Toast Notification -->
-  <div id="toastContainer" class="fixed top-5 right-5 space-y-2 z-50"></div>
+  <div id="toastContainer" class="toast-container fixed top-5 right-5 space-y-2 z-50"></div>
 
   <!-- ✅ Scripts -->
   <script type="module" src="firebase-login.js"></script>
